@@ -104,6 +104,11 @@ static void fpm_got_signal(struct fpm_event_s *ev, short which, void *arg) /* {{
 				break;
 			case '1' :                  /* SIGUSR1 */
 				zlog(ZLOG_DEBUG, "received SIGUSR1");
+
+				/* fpm_stdio_init_final tied STDERR fd with error_log fd. This affects logging to the
+				 * access.log if it was configured to write to the stderr. Check #8885. */
+				fpm_stdio_restore_original_stderr(0);
+
 				if (0 == fpm_stdio_open_error_log(1)) {
 					zlog(ZLOG_NOTICE, "error log file re-opened");
 				} else {
@@ -117,6 +122,9 @@ static void fpm_got_signal(struct fpm_event_s *ev, short which, void *arg) /* {{
 					zlog(ZLOG_ERROR, "unable to re-opened access log file");
 				}
 				/* else no access log are set */
+
+				/* We need to tie stderr with error_log in the master process after log files reload. Check #8885. */
+				fpm_stdio_redirect_stderr_to_error_log();
 
 				break;
 			case '2' :                  /* SIGUSR2 */
